--- a/2.html
+++ b/2.html
@@ -8,12 +8,12 @@
 </head>
 <body>
   <div class="area">
-    <div>
+    <div class="intro">
     <p>The COVID-19 pandemic, caused by a new SARS-CoV virus (the first version of which caused the 2002&ndash;2004 outbreak), seemed to make clear for everyone the importance of global cooperation, solidarity and unity in our societies. It&rsquo;s the common sense that suggests that, during a state of emergency, humanity, at least for a while, has to combine its resources in order to save lives and save its dignity. Wouldn&rsquo;t it be total madness if the governments would refuse to stop austerity policies when the health systems are overloaded; if the richest of the rich would keep pursuing immense profits while the rest of the world is experiencing an unprecedented crisis; if the global community would fail to make any collective decision during a global emergency? Wouldn&rsquo;t it bring our more or less civilized world into a state of some kind of barbarism? However, this is what happened.&nbsp;</p>
-    <p><br></p>
+    <br>
     <p>In this designer-as-author project I will try to outline some contours of this new predicament, which is, apparently, at its dawn.</p>
   </div>
   </div>
-  <div class="next"> </div>
+  <div onclick="location.href='https://theageofbarbarism.github.io/3.html';" class="next"> </div>
 </body>
 </html>
