--- a/4.html
+++ b/4.html
@@ -8,10 +8,10 @@
 </head>
 <body>
   <div class="area">
-  <img class="svgs" src="fig1.svg">
+  <img class="fig1" src="fig1.svg">
   </div>
 
-  <div onclick="location.href='https://theageofbarbarism.github.io/4.html';" class="next"> </div>
+  <div onclick="location.href='https://theageofbarbarism.github.io/5.html';" class="next"> </div>
   <div class="s">
     <p>S</p>
   </div>
