--- a/11.html
+++ b/11.html
@@ -4,15 +4,27 @@
   <meta charset="utf-8">
   <title></title>
   <meta name="viewport" content="initial-scale=1">
-  <link rel="stylesheet" href="7.css">
+  <link rel="stylesheet" href="2.css">
 </head>
 <body>
   <div class="area">
-    <div class="column50">
-    <h2>THE COVID PANDEMIC MIGHT ONLY BE A REHEARSAL BEFORE FUTURE GLOBAL CATASTROPHES.</h2>
-    </div>
+    <div class="intro">
+    <p>In march 2020, the IMF (International Monetary Fund) announced that it will deploy an overall $1 trillion in emergency loans to countries in need. By October 2020, the fund had lent $101 billion to 81 countries.<br>
+<br>
+According to Oxfam, a shocking trend can be found in the details of those loans: 84% of them, across 67 countries, came with IMF&rsquo;s emphatic calls for austerity policies. The trend was not confined to one type of loan instrument.<br>
+<br>
+At least 9 of the borrower countries, including Afghanistan, Nigeria, and S&atilde;o Tom&eacute; and Pr&iacute;ncipe intend to introduce or increase Value Added Tax (VAT) collection, while 14 countries plan to cut their wage bills including Tunisia, Barbados and Lesotho. Some have committed to undertake both these measures.<br>
+<br>
+History has shown us that IMF-imposed rigid and rapid fiscal consolidation in response to previous crises around the world, has meant cuts to schools and hospitals, loss of benefits for workers and the elderly, increases in regressive forms of taxation that impact low income households and women disproportionately, and exacerbate economic and gender inequality.</p>
   </div>
-  <div onclick="location.href='https://theageofbarbarism.github.io/12.html';" class="next"> </div>
+</div>
+<div class="videoprotests">
+  <video autoplay muted loop>
+    <source src="protests.mp4" type="video/mp4">
+  </video>
+</div>
+  <div onclick="location.href='https://theageofbarbarism.github.io/3.html';" class="next">
+  </div>
   <div class="s">
     <p>S</p>
   </div>
