--- a/13.html
+++ b/13.html
@@ -9,10 +9,16 @@
 <body>
   <div class="area">
     <div class="column50">
-    <h2>THE COVID PANDEMIC MIGHT ONLY BE A REHEARSAL BEFORE FUTURE GLOBAL CATASTROPHES.</h2>
+    <h3>THE PERMAFROST IS MELTING.<br>
+&darr;<br>
+IT PRODUCES CARBON.<br>
+&darr;<br>
+IT MELTS EVEN FASTER.<br>
+&darr;<br>
+ZOMBIE VIRUSES ARE BEING UNFROZED AND RELEASED.</h3>
     </div>
   </div>
-  <div onclick="location.href='https://theageofbarbarism.github.io/12.html';" class="next"> </div>
+  <div onclick="location.href='https://theageofbarbarism.github.io/13.html';" class="next"> </div>
   <div class="s">
     <p>S</p>
   </div>
