--- a/14.html
+++ b/14.html
@@ -9,7 +9,7 @@
 <body>
   <div class="area">
     <div class="column50">
-    <h2>THE COVID PANDEMIC MIGHT ONLY BE A REHEARSAL BEFORE FUTURE GLOBAL CATASTROPHES.</h2>
+    <h3>RADICAL ECONOMIC REFORMS ARE NEEDED IN ORDER TO ESCAPE BARBARISM. THE CLIMATE CRISIS SHOULD BE TREATED WITH THE SAME URGENCY AS THE PANDEMIC.</h3>
     </div>
   </div>
   <div onclick="location.href='https://theageofbarbarism.github.io/12.html';" class="next"> </div>
