--- a/1.html
+++ b/1.html
@@ -7,6 +7,10 @@
   <link rel="stylesheet" href="1.css">
 </head>
 <body>
-<img class="svgs" src="1.svg">
+  <div class="area">
+    <img class="svgs" src="1.svg">
+  </div>
+  <div onclick="location.href='https://theageofbarbarism.github.io/2.html';" class="next">
+  </div>
 </body>
 </html>
