--- a/12.html
+++ b/12.html
@@ -4,15 +4,33 @@
   <meta charset="utf-8">
   <title></title>
   <meta name="viewport" content="initial-scale=1">
-  <link rel="stylesheet" href="7.css">
+  <link rel="stylesheet" href="12.css">
 </head>
 <body>
   <div class="area">
     <div class="column50">
-    <h2>THE COVID PANDEMIC MIGHT ONLY BE A REHEARSAL BEFORE FUTURE GLOBAL CATASTROPHES.</h2>
+    <h3>THE PERMAFROST IS MELTING.<br>
+&darr;<br>
+IT PRODUCES CARBON.<br>
+&darr;<br>
+IT MELTS EVEN FASTER.<br>
+&darr;<br>
+ZOMBIE VIRUSES ARE BEING UNFROZED AND RELEASED.</h3>
     </div>
   </div>
-  <div onclick="location.href='https://theageofbarbarism.github.io/12.html';" class="next"> </div>
+  <div class="vid1">
+    <video autoplay muted loop>
+      <source src="permafrost.mp4" type="video/mp4">
+    </video>
+  </div>
+  <div class="vid2">
+    <video autoplay muted loop>
+      <source src="permafrost2.mp4" type="video/mp4">
+    </video>
+  </div>
+  <img class="bacteria" src="https://ichef.bbci.co.uk/news/976/media/images/73332000/jpg/_73332942_13-20670-large1.jpg">
+
+  <div onclick="location.href='https://theageofbarbarism.github.io/13.html';" class="next"> </div>
   <div class="s">
     <p>S</p>
   </div>
