--- a/13.html
+++ b/13.html
@@ -9,16 +9,9 @@
 <body>
   <div class="area">
     <div class="column50">
-    <h3>THE PERMAFROST IS MELTING.<br>
-&darr;<br>
-IT PRODUCES CARBON.<br>
-&darr;<br>
-IT MELTS EVEN FASTER.<br>
-&darr;<br>
-ZOMBIE VIRUSES ARE BEING UNFROZED AND RELEASED.</h3>
+    <h3>RADICAL ECONOMIC REFORMS ARE NEEDED IN ORDER TO ESCAPE BARBARISM. THE CLIMATE CRISIS SHOULD BE TREATED WITH THE SAME URGENCY AS THE PANDEMIC.</h3>
     </div>
   </div>
-  <div onclick="location.href='https://theageofbarbarism.github.io/13.html';" class="next"> </div>
   <div class="s">
     <p>S</p>
   </div>
