--- a/3.html
+++ b/3.html
@@ -13,9 +13,10 @@
     </div>
     <div class="column2">
     <p> The increase of inequality, triggered by coronavirus, is in no way ‘natural’. As it will be shown, the spark of inequality could have been prevented/compensated with even just temporary wealth redistribution. The barbarism of the new inequality was a political choice. </p>
+    </div>
   </div>
-  </div>
-  <div onclick="location.href='https://theageofbarbarism.github.io/4.html';" class="next"> </div>
+ <img class="bgpic" src = "covbody.jpg" >
+   <div onclick="location.href='https://theageofbarbarism.github.io/4.html';" class="next"> </div>
   <div class="s">
     <p>S</p>
   </div>
