--- a/7.html
+++ b/7.html
@@ -11,7 +11,7 @@
     <div class="column1">
     <h4>THE WORLD’S TEN RICHEST MEN HAVE SEEN THEIR COMBINED WEALTH INCREASE BY <em>HALF A TRILLION DOLLARS</em> SINCE THE PANDEMIC BEGAN — MORE THAN ENOUGH TO PAY FOR A COVID-19 VACCINE FOR EVERYONE AND TO ENSURE NO ONE IS PUSHED INTO POVERTY BY THE PANDEMIC.</h4>
     </div>
-
+    <img class="billionaires" src="billionaires.png">
   </div>
   </div>
   <div onclick="location.href='https://theageofbarbarism.github.io/8.html';" class="next"> </div>
