--- a/9.html
+++ b/9.html
@@ -9,11 +9,10 @@
 <body>
   <div class="area">
     <div class="column50">
-    <h4>IN SEPTEMBER 2020, JEFF BEZOS, THEN THE RICHEST MAN ON EARTH, COULD HAVE PER&shy;SONAL&shy;LY PAID EACH OF AMA&shy;ZON’S 877,000 EMPLOYE&shy;ES A $105,000 BONUS WITH THE WEALTH HE GAINED BE&shy;TWEEN MARCH AND AUGUST 2020, AND STILL BE AS WEALTHY AS HE WAS AT THE BEGIN&shy;NING OF THE PANDEMIC.</h4>
+    <h2>IN 2020, PRIVATE JET DEMAND HIT RECORD SINCE 2009. 15% MORE PRIVATE JETS WERE BOUGHT IN 2020 COM&shy;PARED TO 2018.</h2>
     </div>
-    <img class="amazon" src="amazon.svg">
   </div>
-  </div>
+  <img class="planes" src="planes.png">
   <div onclick="location.href='https://theageofbarbarism.github.io/10.html';" class="next"> </div>
   <div class="s">
     <p>S</p>
