--- a/1.html
+++ b/1.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <div class="area">
-    <img class="svgs" src="1.svg">
+    <img class="svgs" src="1v2.svg">
   </div>
   <div onclick="location.href='https://theageofbarbarism.github.io/2.html';" class="next">
   </div>
