--- a/10.html
+++ b/10.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title></title>
+  <title>Are We Entering The Age of Barbarism?</title>
   <meta name="viewport" content="initial-scale=1">
   <link rel="stylesheet" href="2.css">
 </head>
@@ -15,7 +15,9 @@ According to Oxfam, a shocking trend can be found in the details of those loans:
 <br>
 At least 9 of the borrower countries, including Afghanistan, Nigeria, and S&atilde;o Tom&eacute; and Pr&iacute;ncipe intend to introduce or increase Value Added Tax (VAT) collection, while 14 countries plan to cut their wage bills including Tunisia, Barbados and Lesotho. Some have committed to undertake both these measures.<br>
 <br>
-History has shown us that IMF-imposed rigid and rapid fiscal consolidation in response to previous crises around the world, has meant cuts to schools and hospitals, loss of benefits for workers and the elderly, increases in regressive forms of taxation that impact low income households and women disproportionately, and exacerbate economic and gender inequality.</p>
+History has shown us that IMF-imposed rigid and rapid fiscal consolidation in response to previous crises around the world, has meant cuts to schools and hospitals, loss of benefits for workers and the elderly, increases in regressive forms of taxation that impact low income households and women disproportionately, and exacerbate economic and gender inequality.
+<br>
+(The video is showing anti-IMF protests in Costa Rica, October 2020.)</p>
   </div>
 </div>
 <div class="videoprotests">
@@ -26,7 +28,13 @@ History has shown us that IMF-imposed rigid and rapid fiscal consolidation in re
   <div onclick="location.href='https://theageofbarbarism.github.io/11.html';" class="next">
   </div>
   <div class="s">
-    <p>S</p>
+    <a href="#" onclick="newWindow()">S</a>
+</div>
+    <script type="text/javascript">
+    function newWindow() {
+      window.open("http://www.theageofbarbarism.github.io/10s","_blank","top=100,left=200,height=400,width=900");
+    }
+    </script>
   </div>
 </body>
 </html>
