--- a/3.html
+++ b/3.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title></title>
+  <title>Are We Entering The Age of Barbarism?</title>
   <meta name="viewport" content="initial-scale=1">
   <link rel="stylesheet" href="2.css">
 </head>
@@ -15,10 +15,8 @@
     <p> The increase of inequality, triggered by coronavirus, is in no way ‘natural’. As it will be shown, the spark of inequality could have been prevented/compensated with even just temporary wealth redistribution. The barbarism of the new inequality was a political choice. </p>
     </div>
   </div>
+
  <img class="bgpic" src = "covbody.jpg" >
-   <div onclick="location.href='https://theageofbarbarism.github.io/4.html';" class="next"> </div>
-  <div class="s">
-    <p>S</p>
-  </div>
+   <div onclick="location.href='https://theageofbarbarism.github.io/4.html';" class="next">
 </body>
 </html>
