--- a/5.html
+++ b/5.html
@@ -2,21 +2,27 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title></title>
+  <title>Are We Entering The Age of Barbarism?</title>
   <meta name="viewport" content="initial-scale=1">
   <link rel="stylesheet" href="2.css">
 </head>
 <body>
   <div class="area">
     <div class="intro">
-    <p>Even though the crisis hit the stock markets, the billionaires (a small group of mostly white men) recovered their wealth to pre-pandemic levels in only <em>nine months</em>.</p>
+    <p>Even though the crisis hit the stock markets, the billionaires (a small group of mostly white men) recovered their wealth to pre-pandemic levels in only nine months.</p>
   </div>
   <img class="fig2" src="fig2.svg">
   </div>
 
   <div onclick="location.href='https://theageofbarbarism.github.io/6.html';" class="next"> </div>
   <div class="s">
-    <p>S</p>
+    <a href="#" onclick="newWindow()">S</a>
+</div>
+    <script type="text/javascript">
+    function newWindow() {
+      window.open("http://www.theageofbarbarism.github.io/5s","_blank","top=100,left=200,height=400,width=900");
+    }
+    </script>
   </div>
 </body>
 </html>
