--- a/6s.html
+++ b/6s.html
@@ -4,13 +4,13 @@
   <meta charset="utf-8">
   <title>Are We Entering The Age of Barbarism?</title>
   <meta name="viewport" content="initial-scale=1">
-  <link rel="stylesheet" href="1.css">
+  <link rel="stylesheet" href="2.css">
 </head>
 <body>
   <div class="area">
-    <img class="svgs" src="1v2.svg">
-  </div>
-  <div onclick="location.href='https://theageofbarbarism.github.io/2.html';" class="next">
+    <p>SOURCES</p>
+    <br>
+    <a href="https://tracktherecovery.org">https://tracktherecovery.org</a>
   </div>
 </body>
 </html>
