--- a/11.html
+++ b/11.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title></title>
+  <title>Are We Entering The Age of Barbarism?</title>
   <meta name="viewport" content="initial-scale=1">
   <link rel="stylesheet" href="7.css">
 </head>
@@ -16,8 +16,7 @@
   <iframe frameborder="0" scrolling="no" marginheight="0" marginwidth="0" type="text/html" src="https://www.youtube.com/embed/6KL8I5-mJqw?autoplay=1&mute=1&fs=0&iv_load_policy=3&showinfo=0&rel=0&cc_load_policy=0&start=0&end=0&origin=https://youtubeembedcode.com"><div><small><a href="https://youtubeembedcode.com/es/">youtubeembedcode es</a></small></div><div><small><a href="https://enableflashplayer.com">Enable flash in chrome</a></small></div><div><small><a href="https://youtubeembedcode.com/de/">youtubeembedcode.com/de/</a></small></div><div><small><a href="https://googlemapsgenerator.com">Google maps embed</a></small></div> </iframe>
 </div>
   <div onclick="location.href='https://theageofbarbarism.github.io/12.html';" class="next"> </div>
-  <div class="s">
-    <p>S</p>
+
   </div>
 </body>
 </html>
