--- a/2.html
+++ b/2.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title></title>
+  <title>Are We Entering The Age of Barbarism?</title>
   <meta name="viewport" content="initial-scale=1">
   <link rel="stylesheet" href="2.css">
 </head>
@@ -15,5 +15,14 @@
   </div>
   </div>
   <div onclick="location.href='https://theageofbarbarism.github.io/3.html';" class="next"> </div>
+
+  <div class="s">
+    <a href="#" onclick="newWindow()">S</a>
+</div>
+    <script type="text/javascript">
+    function newWindow() {
+      window.open("http://www.theageofbarbarism.github.io/2s","_blank","top=100,left=200,height=400,width=900");
+    }
+    </script>
 </body>
 </html>
