--- a/7.html
+++ b/7.html
@@ -2,9 +2,14 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title></title>
+  <title>Are We Entering The Age of Barbarism?</title>
   <meta name="viewport" content="initial-scale=1">
   <link rel="stylesheet" href="7.css">
+  <script>
+  function popup() {
+   document.getElementById('open').innerHTML = 'Добро пожаловать!';
+  }
+  </script>
 </head>
 <body>
   <div class="area">
@@ -15,8 +20,14 @@
   </div>
   </div>
   <div onclick="location.href='https://theageofbarbarism.github.io/8.html';" class="next"> </div>
+
   <div class="s">
-    <p>S</p>
-  </div>
+    <a href="#" onclick="newWindow()">S</a>
+</div>
+    <script type="text/javascript">
+    function newWindow() {
+      window.open("http://www.theageofbarbarism.github.io/7s","_blank","top=100,left=200,height=400,width=900");
+    }
+    </script>
 </body>
 </html>
