--- a/8.html
+++ b/8.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title></title>
+  <title>Are We Entering The Age of Barbarism?</title>
   <meta name="viewport" content="initial-scale=1">
   <link rel="stylesheet" href="7.css">
 </head>
@@ -16,7 +16,13 @@
   </div>
   <div onclick="location.href='https://theageofbarbarism.github.io/9.html';" class="next"> </div>
   <div class="s">
-    <p>S</p>
+    <a href="#" onclick="newWindow()">S</a>
+</div>
+    <script type="text/javascript">
+    function newWindow() {
+      window.open("http://www.theageofbarbarism.github.io/8s","_blank","top=100,left=200,height=400,width=900");
+    }
+    </script>
   </div>
 </body>
 </html>
