--- a/10.html
+++ b/10.html
@@ -32,7 +32,7 @@ History has shown us that IMF-imposed rigid and rapid fiscal consolidation in re
 </div>
     <script type="text/javascript">
     function newWindow() {
-      window.open("http://www.theageofbarbarism.github.io/10s","_blank","top=100,left=200,height=400,width=900");
+      window.open("http://www.theageofbarbarism.github.io/10s.html"","_blank","top=100,left=200,height=400,width=900");
     }
     </script>
   </div>
