--- a/12.html
+++ b/12.html
@@ -36,7 +36,7 @@ ZOMBIE VIRUSES ARE BEING UNFROZED AND RELEASED.</h3>
 </div>
     <script type="text/javascript">
     function newWindow() {
-      window.open("http://www.theageofbarbarism.github.io/12s","_blank","top=100,left=200,height=400,width=900");
+      window.open("http://www.theageofbarbarism.github.io/12s.html"","_blank","top=100,left=200,height=400,width=900");
     }
     </script>
   </div>
