--- a/7.html
+++ b/7.html
@@ -26,7 +26,7 @@
 </div>
     <script type="text/javascript">
     function newWindow() {
-      window.open("http://www.theageofbarbarism.github.io/7s","_blank","top=100,left=200,height=400,width=900");
+      window.open("http://www.theageofbarbarism.github.io/7s.html"","_blank","top=100,left=200,height=400,width=900");
     }
     </script>
 </body>
