--- a/5.html
+++ b/5.html
@@ -20,7 +20,7 @@
 </div>
     <script type="text/javascript">
     function newWindow() {
-      window.open("http://www.theageofbarbarism.github.io/5s.html","_blank","top=100,left=200,height=400,width=900");
+      window.open("http://theageofbarbarism.github.io/5s.html","_blank","top=100,left=200,height=400,width=900");
     }
     </script>
   </div>
