--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
     <img class="svgs" src="1v2.svg">
   </div>
   <div onclick="location.href='https://theageofbarbarism.github.io/2.html';" class="next">
+    <div class="continue">
+      <p>CLICK HERE TO CONTINUE</p>
+    </div>
   </div>
+
 </body>
 </html>
