--- a/index.html
+++ b/index.html
@@ -5,15 +5,20 @@
   <title>Are We Entering The Age of Barbarism?</title>
   <meta name="viewport" content="initial-scale=1">
   <link rel="stylesheet" href="1.css">
+  <script type="text/javascript">
+  function chbg(color) {
+  document.getElementById('b').style.backgroundColor = color;
+  }
+  </script>
 </head>
 <body>
   <div class="area">
     <img class="svgs" src="1v2.svg">
   </div>
-  <div onclick="location.href='https://theageofbarbarism.github.io/2.html';" class="next">
+  <div onclick="location.href='https://theageofbarbarism.github.io/2.html';" class="next" id="b">
   </div>
-  <div class="continue">
-    <img src="continue.svg">
+  <div class="continue" id="a" onmouseover="chbg('#01acb7')" onmouseout="chbg('#C4C4C4')">
+    <a href="https://theageofbarbarism.github.io/2.html"><img src="continue.svg"></a>
   </div>
 </body>
 </html>
